--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "cloudinary": "^2.2.0",
+    "cloudinary": "1.34.0",
+    "formidable": "^3.5.1",
+    "h3-formidable": "^1.0.0",
     "mongoose": "^8.4.1",
     "nuxt": "^3.12.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
+  },
+  "devDependencies": {
+    "@types/formidable": "^3.4.5"
   }
 }
